Splitted CUDAUtils in several files to decrease compilation time.

--- a/scai/utilskernel/cuda/CMakeLists.txt
+++ b/scai/utilskernel/cuda/CMakeLists.txt
@@ -39,6 +39,9 @@ scai_project(
     CUDA_CLASSES
 
         CUDAUtils
+        CUDASparseUtils
+        CUDAReduceUtils
+        CUDASortUtils
         CUDASection
         
     ADD_PARENT_SCOPE
