Cleaned up complex code

--- a/scai/common/CMakeLists.txt
+++ b/scai/common/CMakeLists.txt
@@ -198,6 +198,7 @@ set ( COMMON_HEADERS
         Constants
         Factory
         Factory1
+        MathReal
         Math
         OpenMP
         NonCopyable
