Clarified setter routines for Vector, added VectorAssemblyAccess for distributed initializatons.

--- a/scai/lama/test/CMakeLists.txt
+++ b/scai/lama/test/CMakeLists.txt
@@ -58,6 +58,7 @@ scai_project (
         PartitionIOTest
         SparseVectorTest
         VectorTest
+        VectorAssemblyTest
         VersionTest
 
     )
