Add additional debug build in CI for gcc 4.9.1

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ variables:
   INSTALL_DIR: $CI_PROJECT_DIR/installed
 
   # Default configuration for LAMA build
+  LAMA_BUILD_TYPE: Release
   USE_CUDA: 0
   USE_JAVA: 0
   USE_MPI: 0
@@ -36,13 +37,15 @@ variables:
         -DUSE_MIC=$USE_MIC
         -DCMAKE_INSTALL_PREFIX=$INSTALL_DIR
         -DUSE_BOOST_TEST=$USE_BOOST_TEST
+        -DCMAKE_BUILD_TYPE=$LAMA_BUILD_TYPE
         $EXTRA_CMAKE_OPTS
     - make -j$BUILD_THREADS
     - make -j$BUILD_THREADS examples tests
     - ctest --output-on-failure
     - make install
 
-lama on draco (serial):
+lama build serial gcc 4.9.1 (release):
+  # This is the most basic build configuration
   <<: *build_test_install_template
   before_script:
     - *before_every_job
@@ -50,6 +53,27 @@ lama on draco (serial):
     - module load gcc/4.9.1
     - module load libs/boost/1.56
   variables:
+    LAMA_BUILD_TYPE: Release
+    USE_CUDA: 0
+    OMP_NUM_THREADS: 1
+    # It seems to be necessary to specifically specify the Boost installation
+    BOOST_ROOT: /cluster/libs/boost/1.56
+    BOOST_INCLUDEDIR: /cluster/libs/boost/1.56/include
+    BOOST_LIBRARYDIR: /cluster/libs/boost/1.56/lib
+    EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1
+  tags:
+    - draco
+
+lama build serial gcc 4.9.1 (debug):
+  # This is the most basic build configuration
+  <<: *build_test_install_template
+  before_script:
+    - *before_every_job
+    - module load tools/cmake/3.5.2
+    - module load gcc/4.9.1
+    - module load libs/boost/1.56
+  variables:
+    LAMA_BUILD_TYPE: Debug
     USE_CUDA: 0
     OMP_NUM_THREADS: 1
     # It seems to be necessary to specifically specify the Boost installation
