--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -149,3 +149,30 @@ parallel gcc 6.3.0 (release):
 ##################################################################
 # CONFIGURATIONS INTENDED TO RUN ON EVERY COMMIT TO MASTER/DEVELOP
 ##################################################################
+
+parallel gcc 5.4.0 (release):
+  <<: *build_test_install_template
+  stage: build test install
+  before_script:
+    - *before_every_job
+    - module load tools/cmake/3.5.2
+    # Need to use more recent Boost version, because the precompiled 1.56 version
+    # is not compatible with GCC 6.3.0
+    - module load libs/boost/1.62.0-gcc-5.4.0-ompi-2.0.1-python-3.5.2
+    - module load gcc/5.4.0
+    # LIBRARY_PATH messes up which library gets linked, see issue #40
+    - unset LIBRARY_PATH
+  variables:
+    LAMA_BUILD_TYPE: Release
+    USE_CUDA: 0
+    OMP_NUM_THREADS: 4
+    # It seems to be necessary to specifically specify the Boost installation
+    BOOST_ROOT: /cluster/libs/boost/1.62.0-gcc-5.4.0-ompi-2.0.1-python-3.5.2
+    BOOST_INCLUDEDIR: /cluster/libs/boost/1.62.0-gcc-5.4.0-ompi-2.0.1-python-3.5.2/include
+    BOOST_LIBRARYDIR: /cluster/libs/boost/1.62.0-gcc-5.4.0-ompi-2.0.1-python-3.5.2/lib
+    EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1
+  tags:
+    - draco
+  only:
+    - master
+    - develop
