--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,8 +36,9 @@ variables:
     - cd $BUILD_DIR
     - env
     - set -x
+    # Note: eval is necessary to expand EXTRA_CMAKE_OPTS correctly
     - >
-        cmake ../scai
+        eval cmake ../scai
         -DUSE_OPENMP=$USE_OPENMP
         -DUSE_CUDA=$USE_CUDA
         -DUSE_JAVA=$USE_JAVA
@@ -47,7 +48,7 @@ variables:
         -DCMAKE_INSTALL_PREFIX=$INSTALL_DIR
         -DUSE_BOOST_TEST=$USE_BOOST_TEST
         -DCMAKE_BUILD_TYPE=$LAMA_BUILD_TYPE
-        $EXTRA_CMAKE_OPTS
+        "$EXTRA_CMAKE_OPTS"
     - make -j$BUILD_THREADS
     - make -j$BUILD_THREADS examples tests
     - ctest --output-on-failure
