--- a/scai/hmemo/examples/CMakeLists.txt
+++ b/scai/hmemo/examples/CMakeLists.txt
@@ -44,7 +44,7 @@ foreach ( executable Array BenchArray BenchContext Aliasing Threading Create Rem
 
 endforeach ( executable )
 
-scai_subdirectories( CUDA MIC )
+scai_subdirectories( CUDA )
 
 # use the recommended installation directory for this example directory
 scai_example_directory ( INSTALL_EXAMPLE_DIR )
