--- a/scai/common/SCAITypes.hpp.in
+++ b/scai/common/SCAITypes.hpp.in
@@ -41,7 +41,6 @@
 
 #include <scai/common/config.hpp>
 
-#include <scai/common/mic/MICCallable.hpp>
 #include <scai/common/mepr/TypeList.hpp>
 #include <scai/common/mepr/TypeListUtils.hpp>
 
@@ -83,7 +82,7 @@ typedef long double LongDouble;
 /** Definition for a constant value that indicates a non-available index.
  */
 
-COMMON_DLL_IMPORTEXPORT MIC_CALLABLE_MEMBER extern const IndexType nIndex;
+COMMON_DLL_IMPORTEXPORT extern const IndexType nIndex;
 
 /** Data type that is used for numbering of partitions.
  *
@@ -94,7 +93,7 @@ typedef IndexType PartitionId;
 
 /** Definition for a constant value that indicates a non-available partition.
  */
-COMMON_DLL_IMPORTEXPORT MIC_CALLABLE_MEMBER extern const PartitionId nPartition;
+COMMON_DLL_IMPORTEXPORT extern const PartitionId nPartition;
 
 /*
  * Lists of all supported numeric types
@@ -129,7 +128,6 @@ COMMON_DLL_IMPORTEXPORT MIC_CALLABLE_MEMBER extern const PartitionId nPartition;
 #define SCAI_NUMERIC_TYPES_HOST     ${ALL_HOST_TYPES}
 #define SCAI_NUMERIC_TYPES_EXT_HOST ${EXT_HOST_TYPES}
 #define SCAI_NUMERIC_TYPES_CUDA     ${CUDA_TYPES}
-#define SCAI_NUMERIC_TYPES_MIC      ${MIC_TYPES}
 
 /*
  * Supported array types on different devices
@@ -140,7 +138,6 @@ COMMON_DLL_IMPORTEXPORT MIC_CALLABLE_MEMBER extern const PartitionId nPartition;
 #define SCAI_ARRAY_TYPES_HOST     ${ARRAY_HOST_TYPES}
 #define SCAI_ARRAY_TYPES_EXT_HOST ${ARRAY_EXT_HOST_TYPES}
 #define SCAI_ARRAY_TYPES_CUDA     ${ARRAY_CUDA_TYPES}
-#define SCAI_ARRAY_TYPES_MIC      ${ARRAY_MIC_TYPES}
 
 /*
  * List creation
@@ -151,12 +148,10 @@ COMMON_DLL_IMPORTEXPORT MIC_CALLABLE_MEMBER extern const PartitionId nPartition;
 #define SCAI_NUMERIC_TYPES_HOST_LIST       SCAI_TYPELIST( SCAI_NUMERIC_TYPES_HOST )
 #define SCAI_NUMERIC_TYPES_EXT_HOST_LIST   SCAI_TYPELIST( SCAI_NUMERIC_TYPES_EXT_HOST )
 #define SCAI_NUMERIC_TYPES_CUDA_LIST       SCAI_TYPELIST( SCAI_NUMERIC_TYPES_CUDA )
-#define SCAI_NUMERIC_TYPES_MIC_LIST        SCAI_TYPELIST( SCAI_NUMERIC_TYPES_MIC )
 
 #define SCAI_ARRAY_TYPES_HOST_LIST         SCAI_TYPELIST( SCAI_ARRAY_TYPES_HOST )
 #define SCAI_ARRAY_TYPES_EXT_HOST_LIST     SCAI_TYPELIST( SCAI_ARRAY_TYPES_EXT_HOST )
 #define SCAI_ARRAY_TYPES_CUDA_LIST         SCAI_TYPELIST( SCAI_ARRAY_TYPES_CUDA )
-#define SCAI_ARRAY_TYPES_MIC_LIST          SCAI_TYPELIST( SCAI_ARRAY_TYPES_MIC )
 
 #define SCAI_ALL_TYPES_LIST                SCAI_TYPELIST( SCAI_ALL_TYPES )
 
