Renamed Vector to _Vector

--- a/scai/lama/CMakeLists.txt
+++ b/scai/lama/CMakeLists.txt
@@ -63,7 +63,7 @@ scai_project (
         GridSection
         SparseVector
 
-        Vector
+        _Vector
         VectorAssemblyAccess
 
         GridVector
