File rename Matrix to _Matrix

--- a/scai/lama/matrix/CMakeLists.txt
+++ b/scai/lama/matrix/CMakeLists.txt
@@ -38,13 +38,14 @@ scai_project (
 
     CLASSES
 
+        _Matrix
+
         COOSparseMatrix
         CSRSparseMatrix
         DenseMatrix
         DIASparseMatrix
         ELLSparseMatrix
         JDSSparseMatrix
-        Matrix
         SparseMatrix
         StencilMatrix
 
