New enum classes are now in separate files.

--- a/scai/lama/matrix/CMakeLists.txt
+++ b/scai/lama/matrix/CMakeLists.txt
@@ -55,7 +55,8 @@ scai_project (
     HEADERS 
  
         all 
-        CRTPMatrix 
+        MatrixKind 
+        SyncKind 
         AbstractMatrix
 
     ADD_PARENT_SCOPE
