Header file OperatorMatrix.hpp replacing AbstractMatrix.hpp was not updated in cmake configuration

--- a/scai/lama/matrix/CMakeLists.txt
+++ b/scai/lama/matrix/CMakeLists.txt
@@ -57,7 +57,7 @@ scai_project (
         all 
         MatrixKind 
         SyncKind 
-        AbstractMatrix
+        OperatorMatrix
 
     ADD_PARENT_SCOPE
 )
