--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,6 +71,7 @@ common basic build serial gcc 4.9.1 (debug):
   before_script:
     - *before_every_job
     - module load tools/cmake/3.5.2 tools/python/2.7.14
+    - module unload gcc
     - module load gcc/4.9.1
     - module load libs/boost/1.56
   variables:
@@ -92,6 +93,7 @@ serial gcc 4.9.1 (release):
   before_script:
     - *before_every_job
     - module load tools/cmake/3.5.2 tools/python/2.7.14
+    - module unload gcc
     - module load gcc/4.9.1
     - module load libs/boost/1.56
   variables:
@@ -112,6 +114,7 @@ serial gcc 4.9.1 (debug):
   before_script:
     - *before_every_job
     - module load tools/cmake/3.5.2 tools/python/2.7.14
+    - module unload gcc
     - module load gcc/4.9.1
     - module load libs/boost/1.56
   variables:
@@ -132,6 +135,7 @@ parallel gcc 6.3.0 (release):
   before_script:
     - *before_every_job
     - module load tools/cmake/3.5.2 tools/python/2.7.14
+    - module unload gcc
     # Need to use more recent Boost version, because the precompiled 1.56 version
     # is not compatible with GCC 6.3.0
     - module load libs/boost/1.62.0-gcc-5.4.0-ompi-2.0.1-python-3.5.2
@@ -162,6 +166,7 @@ parallel gcc 5.4.0 (release):
   before_script:
     - *before_every_job
     - module load tools/cmake/3.5.2 tools/python/2.7.14
+    - module unload gcc
     # Need to use more recent Boost version, because the precompiled 1.56 version
     # is not compatible with GCC 6.3.0
     - module load libs/boost/1.62.0-gcc-5.4.0-ompi-2.0.1-python-3.5.2
@@ -189,6 +194,7 @@ sanitized parallel gcc 6.3.0:
   before_script:
     - *before_every_job
     - module load tools/cmake/3.5.2 tools/python/2.7.14
+    - module unload gcc
     # Need to use more recent Boost version, because the precompiled 1.56 version
     # is not compatible with GCC 6.3.0
     - module load libs/boost/1.62.0-gcc-5.4.0-ompi-2.0.1-python-3.5.2
