--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,15 +73,12 @@ common basic build serial gcc 4.9.1 (debug):
     - module load tools/cmake/3.5.2 tools/python/2.7.14
     - module unload gcc
     - module load gcc/4.9.1
-    - module load libs/boost/1.56
   variables:
     LAMA_BUILD_TYPE: Debug
     USE_OPENMP: 0
     USE_CUDA: 0
     OMP_NUM_THREADS: 1
-    BOOST_ROOT: /cluster/libs/boost/1.56
-    BOOST_INCLUDEDIR: /cluster/libs/boost/1.56/include
-    BOOST_LIBRARYDIR: /cluster/libs/boost/1.56/lib
+    BOOST_ROOT: /scaihome/lama/boost_test_1_65_1
     # Note the SCAI_MODULES definition
     EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1 -DSCAI_MODULES=common
   tags:
@@ -95,15 +92,12 @@ serial gcc 4.9.1 (release):
     - module load tools/cmake/3.5.2 tools/python/2.7.14
     - module unload gcc
     - module load gcc/4.9.1
-    - module load libs/boost/1.56
   variables:
     LAMA_BUILD_TYPE: Release
     USE_CUDA: 0
     OMP_NUM_THREADS: 1
     # It seems to be necessary to specifically specify the Boost installation
-    BOOST_ROOT: /cluster/libs/boost/1.56
-    BOOST_INCLUDEDIR: /cluster/libs/boost/1.56/include
-    BOOST_LIBRARYDIR: /cluster/libs/boost/1.56/lib
+    BOOST_ROOT: /scaihome/lama/boost_test_1_65_1
     EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1
   tags:
     - draco
@@ -116,15 +110,12 @@ serial gcc 4.9.1 (debug):
     - module load tools/cmake/3.5.2 tools/python/2.7.14
     - module unload gcc
     - module load gcc/4.9.1
-    - module load libs/boost/1.56
   variables:
     LAMA_BUILD_TYPE: Debug
     USE_CUDA: 0
     OMP_NUM_THREADS: 1
     # It seems to be necessary to specifically specify the Boost installation
-    BOOST_ROOT: /cluster/libs/boost/1.56
-    BOOST_INCLUDEDIR: /cluster/libs/boost/1.56/include
-    BOOST_LIBRARYDIR: /cluster/libs/boost/1.56/lib
+    BOOST_ROOT: /scaihome/lama/boost_test_1_65_1
     EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1
   tags:
     - draco
@@ -136,21 +127,13 @@ parallel gcc 6.3.0 (release):
     - *before_every_job
     - module load tools/cmake/3.5.2 tools/python/2.7.14
     - module unload gcc
-    # Need to use more recent Boost version, because the precompiled 1.56 version
-    # is not compatible with GCC 6.3.0
-    - module load libs/boost/1.62.0-gcc-5.4.0-ompi-2.0.1-python-3.5.2
-    - module unload gcc
     - module load gcc/6.3.0
-    # LIBRARY_PATH messes up which library gets linked, see issue #40
-    - unset LIBRARY_PATH
   variables:
     LAMA_BUILD_TYPE: Release
     USE_CUDA: 0
     OMP_NUM_THREADS: 4
     # It seems to be necessary to specifically specify the Boost installation
-    BOOST_ROOT: /cluster/libs/boost/1.62.0-gcc-5.4.0-ompi-2.0.1-python-3.5.2
-    BOOST_INCLUDEDIR: /cluster/libs/boost/1.62.0-gcc-5.4.0-ompi-2.0.1-python-3.5.2/include
-    BOOST_LIBRARYDIR: /cluster/libs/boost/1.62.0-gcc-5.4.0-ompi-2.0.1-python-3.5.2/lib
+    BOOST_ROOT: /scaihome/lama/boost_test_1_65_1
     EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1
   tags:
     - draco
@@ -167,20 +150,13 @@ parallel gcc 5.4.0 (release):
     - *before_every_job
     - module load tools/cmake/3.5.2 tools/python/2.7.14
     - module unload gcc
-    # Need to use more recent Boost version, because the precompiled 1.56 version
-    # is not compatible with GCC 6.3.0
-    - module load libs/boost/1.62.0-gcc-5.4.0-ompi-2.0.1-python-3.5.2
     - module load gcc/5.4.0
-    # LIBRARY_PATH messes up which library gets linked, see issue #40
-    - unset LIBRARY_PATH
   variables:
     LAMA_BUILD_TYPE: Release
     USE_CUDA: 0
     OMP_NUM_THREADS: 4
     # It seems to be necessary to specifically specify the Boost installation
-    BOOST_ROOT: /cluster/libs/boost/1.62.0-gcc-5.4.0-ompi-2.0.1-python-3.5.2
-    BOOST_INCLUDEDIR: /cluster/libs/boost/1.62.0-gcc-5.4.0-ompi-2.0.1-python-3.5.2/include
-    BOOST_LIBRARYDIR: /cluster/libs/boost/1.62.0-gcc-5.4.0-ompi-2.0.1-python-3.5.2/lib
+    BOOST_ROOT: /scaihome/lama/boost_test_1_65_1
     EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1
   tags:
     - draco
@@ -195,21 +171,13 @@ sanitized parallel gcc 6.3.0:
     - *before_every_job
     - module load tools/cmake/3.5.2 tools/python/2.7.14
     - module unload gcc
-    # Need to use more recent Boost version, because the precompiled 1.56 version
-    # is not compatible with GCC 6.3.0
-    - module load libs/boost/1.62.0-gcc-5.4.0-ompi-2.0.1-python-3.5.2
-    - module unload gcc
     - module load gcc/6.3.0
-    # LIBRARY_PATH messes up which library gets linked, see issue #40
-    - unset LIBRARY_PATH
   variables:
     LAMA_BUILD_TYPE: Debug
     USE_CUDA: 0
     OMP_NUM_THREADS: 4
     # It seems to be necessary to specifically specify the Boost installation
-    BOOST_ROOT: /cluster/libs/boost/1.62.0-gcc-5.4.0-ompi-2.0.1-python-3.5.2
-    BOOST_INCLUDEDIR: /cluster/libs/boost/1.62.0-gcc-5.4.0-ompi-2.0.1-python-3.5.2/include
-    BOOST_LIBRARYDIR: /cluster/libs/boost/1.62.0-gcc-5.4.0-ompi-2.0.1-python-3.5.2/lib
+    BOOST_ROOT: /scaihome/lama/boost_test_1_65_1
     UBSAN_OPTIONS: print_stacktrace=1
     # We currently have some tests which try to allocate too much memory,
     # expecting to receive an exception. ASAN will by default not allow returning
