First adaption of solvers, only CG, disabled many tests.

--- a/scai/solver/CMakeLists.txt
+++ b/scai/solver/CMakeLists.txt
@@ -75,10 +75,10 @@ scai_project (
 #       Richardson
 #       SimpleAMG
 #       SingleGridSetup
-#       SolutionProxy
+        SolutionProxy
         Solver
 #       TFQMR
-#       TrivialPreconditioner
+        TrivialPreconditioner
 
     )
 
