Jacobi solver + test refactored.

--- a/scai/solver/CMakeLists.txt
+++ b/scai/solver/CMakeLists.txt
@@ -67,7 +67,7 @@ scai_project (
 #       GMRES
 #       InverseSolver
         IterativeSolver
-#       Jacobi
+        Jacobi
 #       Kaczmarz
 #       MINRES
 #       OmegaSolver
