ResidualThresholdTest now okay again and improved.

--- a/scai/solver/test/CMakeLists.txt
+++ b/scai/solver/test/CMakeLists.txt
@@ -61,7 +61,7 @@ scai_project (
 #       MINRESTest
 #       QMRTest
 #       ResidualStagnationTest
-#       ResidualThresholdTest
+        ResidualThresholdTest
 #       RichardsonTest
 #       SimpleAMGTest
 #       SolutionProxyTest
