Make artifact take $BUILD_DIR into account
I am actually not sure if one can use environment variables in this spot, but I thought I would  give it a try.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,8 +53,8 @@ variables:
     - make install
   artifacts:
     paths:
-    - testoutput/report.html
-    - testoutput/
+    - $BUILD_DIR/testoutput/report.html
+    - $BUILD_DIR/testoutput/
     expire_in: 1 week
 
 ###############################################################
