--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,7 +85,7 @@ common basic build serial gcc 4.9.1 (debug):
     OMP_NUM_THREADS: 1
     BOOST_ROOT: /scaihome/lama/boost_test_1_65_1_gcc_4_9_1
     # Note the SCAI_MODULES definition
-    EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1 -DSCAI_MODULES=common
+    EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1 -DBoost_NO_SYSTEM_PATHS=1 -DSCAI_MODULES=common
     RUN_TESTS_ARGS: --tests commonTest
   tags:
     - draco
@@ -104,7 +104,7 @@ serial gcc 4.9.1 (release):
     OMP_NUM_THREADS: 1
     # It seems to be necessary to specifically specify the Boost installation
     BOOST_ROOT: /scaihome/lama/boost_test_1_65_1_gcc_4_9_1
-    EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1
+    EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1 -DBoost_NO_SYSTEM_PATHS=1
   tags:
     - draco
 
@@ -122,7 +122,7 @@ serial gcc 4.9.1 (debug):
     OMP_NUM_THREADS: 1
     # It seems to be necessary to specifically specify the Boost installation
     BOOST_ROOT: /scaihome/lama/boost_test_1_65_1_gcc_4_9_1
-    EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1
+    EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1 -DBoost_NO_SYSTEM_PATHS=1
   tags:
     - draco
 
@@ -139,8 +139,8 @@ parallel gcc 6.3.0 (release):
     USE_CUDA: 0
     OMP_NUM_THREADS: 4
     # It seems to be necessary to specifically specify the Boost installation
-    BOOST_ROOT: /scaihome/lama/boost_test_1_65_1
-    EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1
+    BOOST_ROOT: /scaihome/lama/boost_test_1_65_1_gcc_6_3_0
+    EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1 -DBoost_NO_SYSTEM_PATHS=1
   tags:
     - draco
 
@@ -161,9 +161,8 @@ parallel gcc 5.4.0 (release):
     LAMA_BUILD_TYPE: Release
     USE_CUDA: 0
     OMP_NUM_THREADS: 4
-    # It seems to be necessary to specifically specify the Boost installation
-    BOOST_ROOT: /scaihome/lama/boost_test_1_65_1
-    EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1
+    BOOST_ROOT: /scaihome/lama/boost_test_1_65_1_gcc_5_4_0
+    EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1 -DBoost_NO_SYSTEM_PATHS=1
   tags:
     - draco
   only:
@@ -182,8 +181,8 @@ sanitized parallel gcc 6.3.0:
     LAMA_BUILD_TYPE: Debug
     USE_CUDA: 0
     OMP_NUM_THREADS: 4
-    # It seems to be necessary to specifically specify the Boost installation
-    BOOST_ROOT: /scaihome/lama/boost_test_1_65_1
+    BOOST_ROOT: /scaihome/lama/boost_test_1_65_1_gcc_6_3_0
+    EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1 -DBoost_NO_SYSTEM_PATHS=1
     UBSAN_OPTIONS: print_stacktrace=1
     # We currently have some tests which try to allocate too much memory,
     # expecting to receive an exception. ASAN will by default not allow returning
