Make sure to move testoutput in after_script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,11 +50,13 @@ variables:
     - make -j$BUILD_THREADS
     - make -j$BUILD_THREADS examples tests
     - eval python run_tests.py --output_dir $BUILD_DIR/testoutput "$RUN_TESTS_ARGS"
+    - make install > $CI_PROJECT_DIR/make_install_output.txt
+  after_script:
     - mv $BUILD_DIR/testoutput $CI_PROJECT_DIR/testoutput
     - cp $CI_PROJECT_DIR/testoutput/report.html $CI_PROJECT_DIR/test_report.html
-    - make install > $CI_PROJECT_DIR/make_install_output.txt
   artifacts:
     paths:
+    # Note: These paths should be relative, otherwise weird things may happen!
     - testoutput/
     - test_report.html
     - make_install_output.txt
