--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,24 +93,6 @@ common basic build serial gcc 4.9.1 (debug):
   tags:
     - draco
 
-serial gcc 4.9.1 (release):
-  <<: *build_test_install_template
-  stage: build test install
-  before_script:
-    - *before_every_job
-    - module load tools/cmake/3.5.2 tools/python/2.7.14
-    - module unload gcc
-    - module load gcc/4.9.1
-  variables:
-    LAMA_BUILD_TYPE: Release
-    USE_CUDA: 0
-    OMP_NUM_THREADS: 1
-    # It seems to be necessary to specifically specify the Boost installation
-    BOOST_ROOT: /scaihome/lama/boost_test_1_65_1_gcc_4_9_1
-    EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1 -DBoost_NO_SYSTEM_PATHS=1
-  tags:
-    - draco
-
 serial gcc 4.9.1 (debug):
   <<: *build_test_install_template
   stage: build test install
@@ -151,6 +133,27 @@ parallel gcc 6.3.0 (release):
 ##################################################################
 # CONFIGURATIONS INTENDED TO RUN ON EVERY COMMIT TO MASTER/DEVELOP
 ##################################################################
+
+serial gcc 4.9.1 (release):
+  <<: *build_test_install_template
+  stage: build test install
+  before_script:
+    - *before_every_job
+    - module load tools/cmake/3.5.2 tools/python/2.7.14
+    - module unload gcc
+    - module load gcc/4.9.1
+  variables:
+    LAMA_BUILD_TYPE: Release
+    USE_CUDA: 0
+    OMP_NUM_THREADS: 1
+    # It seems to be necessary to specifically specify the Boost installation
+    BOOST_ROOT: /scaihome/lama/boost_test_1_65_1_gcc_4_9_1
+    EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1 -DBoost_NO_SYSTEM_PATHS=1
+  tags:
+    - draco
+  only:
+    - master
+    - develop
 
 parallel gcc 5.4.0 (release):
   <<: *build_test_install_template
