--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -111,6 +111,26 @@ serial gcc 4.9.1 (debug):
   tags:
     - draco
 
+mpi gcc 5.4.0 (release):
+  <<: *build_test_install_template
+  stage: build test install
+  before_script:
+    - *before_every_job
+    - module load tools/cmake/3.5.2 tools/python/2.7.14
+    - module unload gcc
+    - module load gcc/5.4.0
+    - module load openmpi/gcc/2.1.2
+  variables:
+    LAMA_BUILD_TYPE: Release
+    USE_CUDA: 0
+    OMP_NUM_THREADS: 1
+    # It seems to be necessary to specifically specify the Boost installation
+    BOOST_ROOT: /scaihome/lama/boost_test_1_65_1_gcc_5_4_0
+    EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1 -DBoost_NO_SYSTEM_PATHS=1
+    RUN_TESTS_ARGS: --mpi --np 1 2 3 5
+  tags:
+    - draco
+
 parallel gcc 6.3.0 (release):
   <<: *build_test_install_template
   stage: build test install
