--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -123,6 +123,7 @@ mpi gcc 5.4.0 (release):
   variables:
     LAMA_BUILD_TYPE: Release
     USE_CUDA: 0
+    USE_MPI: 1
     OMP_NUM_THREADS: 1
     # It seems to be necessary to specifically specify the Boost installation
     BOOST_ROOT: /scaihome/lama/boost_test_1_65_1_gcc_5_4_0
